--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Lernantino // Web Developer</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     </div>
   </section>
 
-  <main class="page-wrapper">
+  <main class="container">
     <!-- about me -->
     <section class="page-section" id="about">
       <h2>About Me</h2>
