--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
   <header>
     <h1>Chloes Portfolio</h1>
     <nav>
+      <a href="About Me">About Me</a>
+      <a href="Work">Work</a>
+      <a href="Contact Me">Contact Me</a>
     </nav>
   </header>
 
   <!-- hero banner -->
   <section class="hero-banner">
     <div>
-      <h2>Cool subtitle here!</h2>
+      <h2>Learn more about me!</h2>
     </div>
   </section>
 
