adding images to site. editing navbar and about me information

--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lernantino // Web Developer</title>
+  <title>Chloe Hill | Professional Portfolio</title>
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
   <!-- main logo / nav -->
   <header>
-    <h1>Chloes Portfolio</h1>
-    <nav>
-      <a href="About Me">About Me</a>
-      <a href="Work">Work</a>
-      <a href="Contact Me">Contact Me</a>
+    <h1>Chloe Hill | Professional Portfolio</h1>
+    <nav class=".nav-grid">
+      <a class="about-me" href="About Me">About Me</a>
+
+      <a class="work" href="Work">Work</a>
+
+      <a class="contact-me" href="Contact Me">Contact Me</a>
     </nav>
   </header>
 
@@ -32,25 +34,37 @@
     <section class="page-section" id="about">
       <h2>About Me</h2>
     </section>
-    <section>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. In minima, accusamus beatae tenetur dolor recusandae corrupti est, qui quas labore fuga libero velit rerum ipsa facere corporis sed. Explicabo, commodi!
-    </section>
+    <p>
+      My Hobbies are Gaming, Crocheting, Reading, watching movies and designing,
+    </p>
 
     <!-- portfolio container -->
     <section class="page-section" id="work">
-      <h2>Work</h2>
+      <h2>My Work</h2>
+
     </section>
-    <section>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. In minima, accusamus beatae tenetur dolor recusandae corrupti est, qui quas labore fuga libero velit rerum ipsa facere corporis sed. Explicabo, commodi!
-    </section>
+    <article class="navBar">
+      <p id="Figma"> Figma </p>
+      <p id="HTML">HTML</p>
+      <p id="CSS">CSS</p>
+      <p id="Excalidraw">Excalidraw</p>
+      <p id="Designing">Designing</p>
+    </article>
+       
+
     <!-- contact -->
     <section class="page-section contact" id="contact">
       <h2>Contact Me</h2>
     </section>
-    <section>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. In minima, accusamus beatae tenetur dolor recusandae corrupti est, qui quas labore fuga libero velit rerum ipsa facere corporis sed. Explicabo, commodi!
-    </section>
+    <p>
+      If you like my work please contact me
+    </p>
   </main>
+  <footer>
+    <h1> Contact Me</h1>
+        <a href="Email">Email</a>
+        <a href="Call">Call</a>
+  </footer>
 </body>
 
 </html>
