--- a/index.html
+++ b/index.html
@@ -13,25 +13,24 @@
   <!-- main logo / nav -->
   <header>
     <h1>Chloe Hill | Professional Portfolio</h1>
-    <nav class=".nav-grid">
-      <a class="about-me" href="About Me">About Me</a>
-
-      <a class="work" href="Work">Work</a>
-
-      <a class="contact-me" href="Contact Me">Contact Me</a>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#work" >Work</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
   <!-- hero banner -->
   <section class="hero-banner">
-    <div>
+    <header>
       <h2>Learn more about me!</h2>
-    </div>
+      <img src="images/selfie.jpeg" alt="black and white selfie of woman smiling with hair tied back in a ponytail">
+    </header>
   </section>
 
   <main class="container">
     <!-- about me -->
-    <section class="page-section" id="about">
+    <section class="page-section">
       <h2>About Me</h2>
     </section>
     <p>
@@ -43,13 +42,13 @@
       <h2>My Work</h2>
 
     </section>
-    <article class="navBar">
+    <section class="navBar">
       <p id="Figma"> Figma </p>
       <p id="HTML">HTML</p>
       <p id="CSS">CSS</p>
       <p id="Excalidraw">Excalidraw</p>
       <p id="Designing">Designing</p>
-    </article>
+    </section>
        
 
     <!-- contact -->
