added copyright and changed wrapper in container

--- a/index.html
+++ b/index.html
@@ -12,26 +12,29 @@
 <body>
   <!-- main logo / nav -->
   <header>
-    <h1>Chloe Hill | Professional Portfolio</h1>
+    <h1>Chloe Hill</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#work" >Work</a>
       <a href="#contact">Contact</a>
-    </nav>
+    </nav> 
+  
   </header>
 
   <!-- hero banner -->
-  <section class="hero-banner">
-    <header>
-      <h2>Learn more about me!</h2>
+   <section class="hero-banner">
+    <h2>Learn more about me</h2>
       <img src="images/selfie.jpeg" alt="black and white selfie of woman smiling with hair tied back in a ponytail">
-    </header>
   </section>
 
+  
   <main class="container">
     <!-- about me -->
-    <section class="page-section">
-      <h2>About Me</h2>
+    <section class="page-section" id="about-me">
+      <h2>About Me
+
+
+      </h2>
     </section>
     <p>
       My Hobbies are Gaming, Crocheting, Reading, watching movies and designing,
@@ -42,12 +45,10 @@
       <h2>My Work</h2>
 
     </section>
-    <section class="navBar">
+    <section class="wrapper">
       <p id="Figma"> Figma </p>
       <p id="HTML">HTML</p>
       <p id="CSS">CSS</p>
-      <p id="Excalidraw">Excalidraw</p>
-      <p id="Designing">Designing</p>
     </section>
        
 
@@ -60,9 +61,10 @@
     </p>
   </main>
   <footer>
-    <h1> Contact Me</h1>
-        <a href="Email">Email</a>
-        <a href="Call">Call</a>
+    <h1>Copyright</h1>
+    &copy; Chloe Hill Designs
+
+        <a class="" href="Email">chloehill333@gmail.com</a>
   </footer>
 </body>
 
