editing style/colors and positioning of header

--- a/index.html
+++ b/index.html
@@ -24,47 +24,50 @@
   <!-- hero banner -->
    <section class="hero-banner">
     <h2>Learn more about me</h2>
-      <img src="images/selfie.jpeg" alt="black and white selfie of woman smiling with hair tied back in a ponytail">
   </section>
+  <aside class="selfie">
+     <img src="images/selfie.jpeg" alt="black and white selfie of woman smiling with hair tied back in a ponytail">
+  </aside>
 
-  
   <main class="container">
     <!-- about me -->
     <section class="page-section" id="about-me">
-      <h2>About Me
-
-
+      <h2>
+        About Me
       </h2>
     </section>
-    <p>
-      My Hobbies are Gaming, Crocheting, Reading, watching movies and designing,
-    </p>
+    <section class="hobbies">
+      <p>
+        My Hobbies are Gaming, Crocheting, Reading, watching movies and designing.
+      </p>
+    </section>
 
     <!-- portfolio container -->
     <section class="page-section" id="work">
       <h2>My Work</h2>
-
     </section>
     <section class="wrapper">
-      <p id="Figma"> Figma </p>
-      <p id="HTML">HTML</p>
-      <p id="CSS">CSS</p>
+      <p id="Figma"> Figma <img src="./images/figma.png"></p>
+      <p id="HTML">HTML <img src="./images/screenshot-html.png"></p>
+      <p id="CSS">CSS <img src="./images/screenshot-css.png"></p>
     </section>
        
-
     <!-- contact -->
     <section class="page-section contact" id="contact">
       <h2>Contact Me</h2>
     </section>
+    <aside>
     <p>
       If you like my work please contact me
     </p>
+    </aside>
+
   </main>
   <footer>
-    <h1>Copyright</h1>
+    <p> Copyright</p>
     &copy; Chloe Hill Designs
 
-        <a class="" href="Email">chloehill333@gmail.com</a>
+        <a class="button" href="Email">chloehill333@gmail.com</a>
   </footer>
 </body>
 
